--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="wrapper"></div>
     <div class="hero-title">
-        <h1>DANCE</h1>
+        <h1>Coffee</h1>
     </div>
 
     </div>
